Add tool tweet link

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -190,21 +190,34 @@
             </tr>
             <tr>
                 <td>
-                    参考リンクとか
+                    リンク
                 </td>
                 <td>
                     <ul>
-                        <li>公式:<a href="http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/">艦隊これくしょん</a></li>
-                        <li><a href="https://twitter.com/KanColle_STAFF/statuses/373961855586140161">公式から</a></li>
+                        <li><a href="http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/">公式 艦隊これくしょん</a></li>
                         <li><a href="http://otiai10.github.io/kanColleWidget/">艦これウィジェット プロジェクトページ</a></li>
-                        <li><a href="http://www.slideshare.net/otiai10/ss-26631311">加賀さんと僕(サービス概要編)</a></li>
-                        <li><a href="http://www.slideshare.net/otiai10/ss-26908975">加賀さんと僕(実装編)</a></li>
-                        <li>「航海日誌」と合わせると良いらしい...知らんけど
-                          <ul><li><a href="https://twitter.com/RGR4Y/status/388514575202537472">“艦これウィジェットと組み合わせると強い。...”</a></li></ul>
-                        </li>
                     </ul>
                 </td>
             </tr>
+                <td>
+                    組み合わせツール
+                </td>
+                <td>
+                    <blockquote class="twitter-tweet" lang="ja">
+                        <p>艦これウィジェットと組み合わせると強い。//“艦これ”を“統計学的に”やり込んでいる提督にお勧めの支援ツール「航海日誌」 - 窓の杜&#10;<a href="http://t.co/0Nww1bVJ4h">http://t.co/0Nww1bVJ4h</a></p>&mdash; R-Gray (@RGR4Y) <a href="https://twitter.com/RGR4Y/statuses/388514575202537472">2013, 10月 11</a>
+                    </blockquote>
+                    <blockquote class="twitter-tweet" lang="ja">
+                        <p>艦これウィジェットに使えるアイコンホップアップ画像第三弾作りました。欲しい方どうぞ。 <a href="http://t.co/kICD7xZhUX">http://t.co/kICD7xZhUX</a> <a href="http://t.co/U2ZcLJhvtS">pic.twitter.com/U2ZcLJhvtS</a></p>&mdash; マグナム (@magunamu77) <a href="https://twitter.com/magunamu77/statuses/389736443024637952">2013, 10月 14</a>
+                    </blockquote>
+                    <blockquote class="twitter-tweet" lang="ja">
+                        <p>艦これウィジェットでの開発報告（ <a href="https://twitter.com/search?q=%23kancolle_item&amp;src=hash">#kancolle_item</a> ）サポート用辞書ファイル公開しました / 【艦これ】艦これウィジェットつぶやき支援辞書を作成しました ー ZO <a href="http://t.co/xsQkCROSua">http://t.co/xsQkCROSua</a></p>&mdash; ぞ (@zo_najap_zo) <a href="https://twitter.com/zo_najap_zo/statuses/411485136060813312">2013, 12月 13</a>
+                    </blockquote>
+                    <blockquote class="twitter-tweet" lang="ja">
+                        <p>艦これ用装備品辞書 for ATOK (MS-IMEは同梱したけど未確認)&#10;艦これウィジェットの開発報告や普段のチャットでの装備品の詳細確認にどうぞ&#10;<a href="https://t.co/qhSCf6pUac">https://t.co/qhSCf6pUac</a>&#10;<a href="https://t.co/QeJQGxw2SO">https://t.co/QeJQGxw2SO</a></p>&mdash; どっかの阿求/ひえだ とわ (@thakyuu) <a href="https://twitter.com/thakyuu/statuses/411731132359507970">2013, 12月 14</a>
+                    </blockquote>
+                </td>
+            </tr>
+
             <tr>
                 <td colspan="2"><h4>[謝辞]</h4></td>
             </tr>
