Add Christmas Effect

--- a/src/html/loader.html
+++ b/src/html/loader.html
@@ -27,6 +27,7 @@
             height: 180px;
             margin: 10px auto;
             display: none;
+            text-shadow: 0 0 5px #fff;
         }
     </style>
 </head>
