Add UI to change capture filename prefix //TODO: validation

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -248,6 +248,8 @@
     <script type="text/javascript" src="../js/pages/view/settings/SettingCheckboxView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingRadioButtonView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingSelectView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/SettingTextView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/CaptureFilenamePrefixView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AllowOcrResultLogView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ImageFormatView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DynamicReminderTypeView.js"></script>
