--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -265,6 +265,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/ClockmodeStyleView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/FileSelectView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TimerFormatRemainedTimeView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/ShowShipsStatusView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
