Use Tracking to decide position of status window

--- a/src/html/ships_status.html
+++ b/src/html/ships_status.html
@@ -20,6 +20,7 @@
 <body>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/Util.js"></script>
+    <script src="../js/definitions/models/MyStorage.js"></script>
     <script src="../js/pages/ships_status.js"></script>
 </body>
 </html>
