--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <td>バージョン</td>
-                <td id="version">0.8.3.0</td>
+                <td id="version"></td>
             </tr>
         </table>
         <table id="reminder-notifications" class="settings">
