Add description in settings

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -12,7 +12,7 @@
     <div class="main">
         <table class="settings">
             <tr>
-                <td colspan="2"><h4>リッチな設定メニュー (※リッチなので現在ベータ版です！)</h4></td>
+                <td colspan="2"><h4>リッチな設定メニュー (※リッチなので現在ベータ版です！常にご意見募集中です)</h4></td>
             </tr>
             <tr>
                 <td>バージョン</td>
@@ -38,7 +38,7 @@
                         <option value="60000">一分前</option>
                         <option value="120000">二分前</option>
                         <option value="180000">三分前</option>
-                    </select>
+                    </select> <span class="description xsmall">建造だけは時間ぴったりです</span>
                 </td>
             </tr>
         </table>
