Add prototype of "Safe mode"

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -6,6 +6,7 @@
 <body>
     <div id="main">
         <h2 id="popup-select-title">提督 仕事しろ</h2>
+        <button id="launch-safely">Safe mode</button>
         <form id="config" name="mode">
             <div class="content">
                 <table>
