Add interface to show 'old launch'

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -251,6 +251,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/SettingTextView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/CaptureFilenamePrefixView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AllowOcrResultLogView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/ShowOldLaunchView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ImageFormatView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DynamicReminderTypeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/EnableMissionReminderView.js"></script>
