--- a/src/html/select.html
+++ b/src/html/select.html
@@ -6,7 +6,7 @@
 <body>
     <div id="main">
         <h2 id="popup-select-title">提督 仕事しろ</h2>
-        <button id="launch-safely">LAUNCH WHITE</button><span class="description">中型のみ</span>
+        <button id="launch-safely" class="clickable">LAUNCH WHITE</button><span class="description">中型のみ</span>
         <br>
         <div>
 	      <input id="screen-shot"  name="screen-shot" type="submit" value="" tabindex="1"/>
