Enable to change text on mission start

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -263,6 +263,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/TimerFormatRemainedTimeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ShowShipsStatusView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/FuckinChromeBugView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/TextOnMissionStartView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DownloadDirectoryView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
