--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -265,6 +265,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/FuckinChromeBugView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TextOnMissionStartView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DownloadDirectoryView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/ModifyOriginalTabView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
