Normal mode is not so bad :)

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -12,7 +12,7 @@
 	      <input id="screen-shot"  name="screen-shot" type="submit" value="" tabindex="1"/>
         </div>
         <div id="old-launch" class="bordered" style="display:none;">
-          <div class="pull-right clickable" id="hide-launch">x</div>
+          <!-- div class="pull-right clickable" id="hide-launch">x</div -->
           <form id="config" name="mode">
               <div class="content">
                   <table>
