--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -262,6 +262,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/FileSelectView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TimerFormatRemainedTimeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ShowShipsStatusView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/HideAdressbarInSafemodeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/FuckinChromeBugView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TextOnMissionStartView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DownloadDirectoryView.js"></script>
