Fix link to issues page

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -175,7 +175,7 @@
             </tr>
             <tr>
                 <td>現在頂いている改善、バグ報告</td>
-                <td><a href="https://github.com/otiai10/kanColleWidget/issues?labels=question&page=1&state=open">github.com/otiai10/kanColleWidget/issues</a>
+                <td><a href="https://github.com/otiai10/kanColleWidget/issues?labels=request&page=1&state=open">github.com/otiai10/kanColleWidget/issues</a>
             </tr>
             <tr>
                 <td>機能改善・バグ報告はここ</td>
