--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -272,6 +272,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/HideAdressbarInSafemodeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TextOnMissionStartView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DownloadDirectoryView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/ModifyOriginalTabView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/UseWhiteModeAsDefaultView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
