--- a/src/html/ships_status.html
+++ b/src/html/ships_status.html
@@ -9,6 +9,8 @@
             padding: 0;
             overflow: hidden;
             cursor: pointer;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
         img {
             width: 100%;
