--- a/src/html/select.html
+++ b/src/html/select.html
@@ -13,7 +13,7 @@
         </div>
         <div id="old-launch" class="bordered" style="display:none;">
           <!-- div class="pull-right clickable" id="hide-launch">x</div -->
-          <form id="config" name="mode">
+          <div id="config">
               <div class="content">
                   <table>
                       <tbody>
@@ -43,13 +43,13 @@
                           </tr>
                           <tr>
                               <td colspan="2">
-	                              <input id="launch" name="launch" type="submit" value="LAUNCH APP" tabindex="2"/>
+	                              <button id="launch" tabindex="2">LAUNCH APP</button>
                               </td>
                           </tr>
                       </tbody>
                   </table>
               </div>
-          </form>
+          </div>
         </div>
         <div id="time-left-wrapper">
         </div>
