--- a/src/html/select.html
+++ b/src/html/select.html
@@ -80,7 +80,8 @@
                 </table>
             </div>
         </div>
-        <button id="show-clockmode-button">clock mode</button><br>
+        <button id="show-clockmode-button">clock mode</button>
+        <button id="sync-load" style="display:none;">load data</button><br>
         <a class="link clickable" data-href="/src/html/settings.html"><small>これの設定など</small><small id="new-arrival"></small></a>
     </div>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
