Add 'destroy item' to achievements

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -63,6 +63,7 @@
                     <tr><td>遠征</td><td id="daily-mission_count">Error</td><td id="weekly-mission_count">Error</td></tr>
                     <tr><td>出撃</td><td id="daily-map_count">Error</td><td id="weekly-map_count">Error</td></tr>
                     <tr><td>開発</td><td id="daily-createitem_count">Error</td><td id="weekly-createitem_count">Error</td></tr>
+                    <tr><td>廃棄</td><td id="daily-destroyitem_count">Error</td><td id="weekly-destroyitem_count">Error</td></tr>
                     <tr><td>建造</td><td id="daily-createship_count">Error</td><td id="weekly-createship_count">Error</td></tr>
                     <tr><td>演習</td><td id="daily-practice_count">Error</td><td id="weekly-practice_count">Error</td></tr>
                     <tr><td>入渠</td><td id="daily-nyukyo_count">Error</td><td id="weekly-nyukyo_count">Error</td></tr>
