Add skel of 'Twitter Share'

--- a/src/html/capture.html
+++ b/src/html/capture.html
@@ -12,6 +12,9 @@
         <script type="text/javascript" src="../js/pages/view/View.js"></script>
         <script type="text/javascript" src="../js/pages/view/CaptureView.js"></script>
         <script type="text/javascript" src="../js/definitions/Canvas.js"></script>
+        <script type="text/javascript" src="../js/definitions/share/chrome_ex_oauth.js"></script>
+        <script type="text/javascript" src="../js/definitions/share/chrome_ex_oauthsimple.js"></script>
+        <script type="text/javascript" src="../js/definitions/share/TwitterService.js"></script>
         <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     </body>
 </html>
