--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>リッチな設定 - 艦これウィジェット</title>
+    <link rel="stylesheet" href="../css/modal.css">
     <link rel="stylesheet" href="../css/settings.css">
 </head>
 <body>
