--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -276,6 +276,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/ModifyOriginalTabView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/UseWhiteModeAsDefaultView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AuthTwitterView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/EnableTwitterRemindView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SyncSaveTypeView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
