--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="stylesheet" href="../css/modal.css">
     <title>「お仕事お疲れさまです」</title>
 </head>
 <body>
