Add `tweet-hashtag` setting

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -277,6 +277,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/UseWhiteModeAsDefaultView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AuthTwitterView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/EnableTwitterRemindView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/TweetHashtagView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SyncSaveTypeView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
