--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="../js/pages/view/ModalView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/DashboardModalView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/SideNaviView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/MissionInfoView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimerView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersBaseView.js"></script>
