Add link to widget/wiki

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -19,6 +19,14 @@
                 <td>バージョン</td>
                 <td id="version"></td>
             </tr>
+            <tr>
+                <td>機能一覧</td>
+                <td><a href="https://github.com/otiai10/kanColleWidget/wiki/%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88%E6%A9%9F%E8%83%BD%E4%B8%80%E8%A6%A7">kanColleWidget/wiki/艦これウィジェットの機能一覧</a></td>
+            </tr>
+            <tr>
+                <td>トラブルシューティング</td>
+                <td><a href="https://github.com/otiai10/kanColleWidget/wiki/%E3%83%88%E3%83%A9%E3%83%96%E3%83%AB%E3%82%B7%E3%83%A5%E3%83%BC%E3%83%86%E3%82%A3%E3%83%B3%E3%82%B0">kanColleWidget/wiki/トラブルシューティング</a></td>
+            </tr>
         </table>
         <table id="reminder-notifications" class="settings">
             <tr>
