Add UI for setting of #448

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -33,13 +33,6 @@
                 <td colspan="2"><h4>[リマインダー・バッチ関係]</h4></td>
             </tr>
             <tr>
-                <td>残り時間をバッチ表示する<a href="https://pbs.twimg.com/media/BTJoojqCMAAqFy3.png"><img src="https://pbs.twimg.com/media/BTNXZaCCIAADciW.png" width="30px"></a></td>
-                <td>
-                    <input id="badge-left-time" type="checkbox">
-                    <span class="xsmall">残り時間を表示しない場合は、終了件数が表示されます</span>
-                </td>
-            </tr>
-            <tr>
                 <td>数分前通知する</td>
                 <td>
                     <select id="notification-offset-millisec" name="notification-offset-millisec">
@@ -287,6 +280,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/EnableTwitterRemindView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TweetHashtagView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SyncSaveTypeView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/UseBadgeColorizeView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
