--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -30,7 +30,7 @@
         </table>
         <table id="reminder-notifications" class="settings">
             <tr>
-                <td colspan="2"><h4>[リマインダー・バッチ関係]</h4></td>
+                <td colspan="2"><h4>[リマインダー・バッジ関係]</h4></td>
             </tr>
             <tr>
                 <td>数分前通知する</td>
@@ -280,7 +280,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/EnableTwitterRemindView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TweetHashtagView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SyncSaveTypeView.js"></script>
-    <script type="text/javascript" src="../js/pages/view/settings/UseBadgeColorizeView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/BadgeStyle.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
