Change link to "magunamu"

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -216,7 +216,7 @@
                         <p>艦これウィジェットと組み合わせると強い。//“艦これ”を“統計学的に”やり込んでいる提督にお勧めの支援ツール「航海日誌」 - 窓の杜&#10;<a href="http://t.co/0Nww1bVJ4h">http://t.co/0Nww1bVJ4h</a></p><a href="https://twitter.com/RGR4Y/statuses/388514575202537472">2013, 10月 11</a>
                     </blockquote>
                     <blockquote class="twitter-tweet" lang="ja">
-                        <p>艦これウィジェットに使えるアイコンホップアップ画像第三弾作りました。欲しい方どうぞ。 <a href="http://t.co/kICD7xZhUX">http://t.co/kICD7xZhUX</a> <a href="http://t.co/U2ZcLJhvtS">pic.twitter.com/U2ZcLJhvtS</a></p><a href="https://twitter.com/magunamu77/statuses/389736443024637952">2013, 10月 14</a>
+                        <p>艦これウィジェットで使用するポップアップ画像集です。 <a href="http://t.co/VnYh8n4647">http://t.co/VnYh8n4647</a></p><a href="https://twitter.com/magunamu77/status/517229332171735040">2014, 10月 1</a>
                     </blockquote>
                     <blockquote class="twitter-tweet" lang="ja">
                         <p>艦これウィジェットでの開発報告（ <a href="https://twitter.com/search?q=%23kancolle_item&amp;src=hash">#kancolle_item</a> ）サポート用辞書ファイル公開しました / 【艦これ】艦これウィジェットつぶやき支援辞書を作成しました ー ZO <a href="http://t.co/xsQkCROSua">http://t.co/xsQkCROSua</a></p><a href="https://twitter.com/zo_najap_zo/statuses/411485136060813312">2013, 12月 13</a>
