Add config interface for API

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -281,6 +281,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/TweetHashtagView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SyncSaveTypeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/BadgeStyle.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
