--- a/src/html/select.html
+++ b/src/html/select.html
@@ -81,8 +81,9 @@
                 </table>
             </div>
         </div>
-        <button id="show-clockmode-button">clock mode</button>
-        <button id="sync-load" style="display:none;">load data</button><br>
+        <button id="show-clockmode-button" class="clickable">clock mode</button>
+        <button id="open-mission-info" class="clickable"><small style="color:#333;">遠征早見表</small></button>
+        <button id="sync-load" class="clickable" style="display:none;">load data</button><br>
         <a class="link clickable" data-href="/src/html/settings.html"><small>これの設定など</small><small id="new-arrival"></small></a>
     </div>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
