--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -213,16 +213,39 @@
                 </td>
                 <td>
                     <blockquote class="twitter-tweet" lang="ja">
-                        <p>艦これウィジェットと組み合わせると強い。//“艦これ”を“統計学的に”やり込んでいる提督にお勧めの支援ツール「航海日誌」 - 窓の杜&#10;<a href="http://t.co/0Nww1bVJ4h">http://t.co/0Nww1bVJ4h</a></p><a href="https://twitter.com/RGR4Y/statuses/388514575202537472">2013, 10月 11</a>
+                        <p>
+                            艦これウィジェットと組み合わせると強い。//“艦これ”を“統計学的に”やり込んでいる提督にお勧めの支援ツール「航海日誌」 - 窓の杜&#10;
+                            <a href="http://t.co/0Nww1bVJ4h">http://t.co/0Nww1bVJ4h</a>
+                        </p>
+                        <a href="https://twitter.com/RGR4Y/statuses/388514575202537472">2013, 10月 11</a>
                     </blockquote>
                     <blockquote class="twitter-tweet" lang="ja">
-                        <p>艦これウィジェットで使用するポップアップ画像集です。 <a href="http://t.co/VnYh8n4647">http://t.co/VnYh8n4647</a></p><a href="https://twitter.com/magunamu77/status/517229332171735040">2014, 10月 1</a>
+                        <p>
+                            艦これウィジェットで使用するポップアップ画像集です。 <a href="http://t.co/VnYh8n4647">http://t.co/VnYh8n4647</a>
+                        </p>
+                        <a href="https://twitter.com/magunamu77/status/517229332171735040">2014, 10月 1</a>
                     </blockquote>
                     <blockquote class="twitter-tweet" lang="ja">
-                        <p>艦これウィジェットでの開発報告（ <a href="https://twitter.com/search?q=%23kancolle_item&amp;src=hash">#kancolle_item</a> ）サポート用辞書ファイル公開しました / 【艦これ】艦これウィジェットつぶやき支援辞書を作成しました ー ZO <a href="http://t.co/xsQkCROSua">http://t.co/xsQkCROSua</a></p><a href="https://twitter.com/zo_najap_zo/statuses/411485136060813312">2013, 12月 13</a>
+                        <p>
+                            艦これウィジェットでの開発報告（ <a href="https://twitter.com/search?q=%23kancolle_item&amp;src=hash">#kancolle_item</a> ）サポート用辞書ファイル公開しました / 【艦これ】艦これウィジェットつぶやき支援辞書を作成しました ー
+                            <a href="http://t.co/xsQkCROSua">http://t.co/xsQkCROSua</a>
+                        </p>
+                        <a href="https://twitter.com/zo_najap_zo/statuses/411485136060813312">2013, 12月 13</a>
                     </blockquote>
                     <blockquote class="twitter-tweet" lang="ja">
-                        <p>艦これ用装備品辞書 for ATOK (MS-IMEは同梱したけど未確認)&#10;艦これウィジェットの開発報告や普段のチャットでの装備品の詳細確認にどうぞ&#10;<a href="https://t.co/qhSCf6pUac">https://t.co/qhSCf6pUac</a>&#10;<a href="https://t.co/QeJQGxw2SO">https://t.co/QeJQGxw2SO</a></p><a href="https://twitter.com/thakyuu/statuses/411731132359507970">2013, 12月 14</a>
+                        <p>
+                            艦これ用装備品辞書 for ATOK (MS-IMEは同梱したけど未確認)&#10;艦これウィジェットの開発報告や普段のチャットでの装備品の詳細確認にどうぞ&#10;
+                            <a href="https://t.co/qhSCf6pUac">https://t.co/qhSCf6pUac</a>&#10;<a href="https://t.co/QeJQGxw2SO">https://t.co/QeJQGxw2SO</a>
+                        </p>
+                        <a href="https://twitter.com/thakyuu/statuses/411731132359507970">2013, 12月 14</a>
+                    </blockquote>
+                    <blockquote class="twitter-tweet" lang="ja">
+                        <p>
+                            iPhone用アプリ「艦これタイマー」ver11.0の配信を開始です！ &#10;
+                            <a href="https://t.co/aKQeEfLsiF">https://t.co/aKQeEfLsiF</a> …&#10;Chrome拡張「連携ツール」「艦これウィジェット」も使うと自動タイマーが可能!&#10;
+                            <a href="http://t.co/I6gmYduEjY">http://t.co/I6gmYduEjY</a> &#10;無料です！
+                        </p>
+                        <a href="https://twitter.com/Kozeni_50yen/status/531993852911943680">2014, 11月 11</a>
                     </blockquote>
                 </td>
             </tr>
