add remodel_slot(改修工廠) quest

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -68,6 +68,7 @@
                     <tr><td>演習</td><td id="daily-practice_count">?</td><td id="weekly-practice_count">?</td></tr>
                     <tr><td>入渠</td><td id="daily-nyukyo_count">?</td><td id="weekly-nyukyo_count">?</td></tr>
                     <tr><td>近改</td><td id="daily-kaisou_count">?</td><td id="weekly-kaisou_count">?</td></tr>
+                    <tr><td>改工</td><td id="daily-remodel_count">?</td><td id="weekly-remodel_count">?</td></tr>
                     <tr>
                         <td></td>
                         <td>
