--- a/src/html/select.html
+++ b/src/html/select.html
@@ -5,12 +5,13 @@
 </head>
 <body>
     <div id="main">
-        <h2 id="popup-select-title">提督 仕事しろ</h2>
+        <h2>
+            <span id="popup-select-title">提督 仕事しろ</span>
+            <input id="screen-shot"  name="screen-shot" type="submit" value="" tabindex="1"/>
+        </h2>
+        <br><!-- めんどくせえからbrでいいや。だれかこの面のcss整備してくれー -->
         <button id="launch-safely" class="clickable">LAUNCH WHITE</button><span class="description">中型のみ</span>
         <br>
-        <div>
-	      <input id="screen-shot"  name="screen-shot" type="submit" value="" tabindex="1"/>
-        </div>
         <div id="old-launch" class="bordered" style="display:none;">
           <!-- div class="pull-right clickable" id="hide-launch">x</div -->
           <div id="config">
