--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -94,10 +94,6 @@
                     <input id="sort-by-finishtime" type="checkbox">
                 </td>
             </tr>
-            <tr>
-                <td>最初に出てくる文字</td>
-                <td><input id="popup-select-title" type="text" size="50" placeholder="提督 仕事しろ"></td>
-            </tr>
         </table>
         <table id="notification-settings" class="settings">
             <tr>
@@ -283,6 +279,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/PreventForgettingQuestView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TirednessLength.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DisplayMaintenanceInfoView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/PopupTitleView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ClockmodeStyleView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/FileSelectView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TimerFormatRemainedTimeView.js"></script>
