--- a/src/html/select.html
+++ b/src/html/select.html
@@ -92,6 +92,8 @@
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersNyukyoView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersCreateshipView.js"></script>
 
+    <script type="text/javascript" src="../js/app.js"></script>
+
     <script type="text/javascript" src="../js/pages/select.js"></script>
 </body>
 </html>
