add "ask before window close" setting

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -289,6 +289,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/DownloadDirectoryView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ModifyOriginalTabView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/UseWhiteModeAsDefaultView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/AskBeforeWindowCloseView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AuthTwitterView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TweetHashtagView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SyncSaveTypeView.js"></script>
