--- a/src/html/select.html
+++ b/src/html/select.html
@@ -59,6 +59,7 @@
             </div>
         </div>
         <button id="show-clockmode-button" class="clickable">clock mode</button>
+        <button id="show-hensei-capture" class="clickable"><small style="color:#333;">編成キャプチャ</small></button>
         <button id="open-mission-info" class="clickable"><small style="color:#333;">遠征早見表</small></button>
         <button id="sync-load" class="clickable" style="display:none;">load data</button><br>
         <a class="link clickable" data-href="/src/html/settings.html"><small>これの設定など</small><small id="new-arrival"></small></a>
