--- a/src/html/hensei-capture.html
+++ b/src/html/hensei-capture.html
@@ -61,8 +61,10 @@
           <blockquote class="left-align minimum">
             MacOSでも使える<a href="https://twitter.com/kanahiron_dev">『艦これ一覧めいかー』</a>みたいなのが欲しかったのでつくりました。
             だいぶ雑につくったので、いろいろと不備あるかもしれないですが、そこは追い追い直していく所存です。なんか不具合・要望あったら
-            <a href="https://github.com/otiai10/kanColleWidget/issues/new">ここ</a>か<a href="http://www.amazon.co.jp/registry/wishlist/2TM2C8W3AIRMH/?tag=otiai10-22">ここ</a>からメッセージください。とくに、キャプチャした画像を一度canvasに流し込んだり、
-            切り貼りしてtoImageURLしたりしてるので、メモリ貧弱だったりすると悲鳴あげるかもしれないですね。とりあえず開発中は問題なかったですけど。
+            <a href="https://github.com/otiai10/kanColleWidget/issues/new">ここ</a>か<a href="http://www.amazon.co.jp/registry/wishlist/2TM2C8W3AIRMH/?tag=otiai10-22">ここ</a>からメッセージください。
+            とくに、キャプチャした画像を一度canvasに流し込んだり、
+            切り貼りしてtoDataURLしたりしてるので、メモリ貧弱だったりすると悲鳴あげるかもしれないですね。とりあえず開発中は問題なかったですけど。
+            あと、いまのところ、画面がぴったしではなくて余白や余黒がある状態ではたぶんキャプチャ位置がずれます。たくさんのクレームがあったら対応します（たぶん）。
             β版と銘打ってあるので、なんか使いづらくっても、怒ったりしないで、優しく助言してくれるとありがたいです。
           </blockquote>
           <blockquote class="left-align minimum">
