--- a/src/html/hensei-capture.html
+++ b/src/html/hensei-capture.html
@@ -54,6 +54,10 @@
         <div class="col s12">
           <button class="btn btn-small" ng-click="downloadNow()">この編成でまとめをつくってダウンロード</button>
           <button class="btn btn-small" ng-click="toCaptureWindow()">この編成でまとめをつくって編集</button>
+          <p>
+            ※ ページリロードするとリセットされます<br>
+            ※ まとめ画像では2列3行で表示されます
+          </p>
         </div>
       </div>
       <div class="row center-align">
